# YueDu

./: .env.example  .gitignore  alembic.ini  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 146c8a611238_word_not_unique.py  2844267fc9fd_initial_dictionary_table.py  5098849cac44_fix_word_translation_association_unique_.py  5f6e04f0555b_new_models.py  e07ba785f4bc_add_part_of_speech.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: dictionary.py  library.py  segment.py
dict_converter/: convert_bkrs.py
models/: models.py
static/: index.html
static/css/: style.css  styles.css
static/js/: core.js  library.js  matches.js  modes.js  popup.js  reader.js  script.js
static/modes/: match.html  parallel.html  simple.html
templates/: index.html
