[project]
name = "yuedu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "fastapi>=0.136.1",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.27",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
